align fix

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -276,15 +276,6 @@ input[type="number"] {
     margin-bottom: 0;
   }
 }
-.additonalAdvMsg {
-  margin: 4px;
-  p {
-    background-color: @light;
-    padding: 10px;
-    text-align: center;
-    margin-bottom: 0;
-  }
-}
 .payableHead {
   padding: 8px;
   background-color: @border-light;
